// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers App matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-1"
  >
    <div
      class="MuiPaper-root-7 makeStyles-root-2 makeStyles-root-6 MuiPaper-elevation1-10 MuiPaper-rounded-8"
    >
      <div
        class="makeStyles-root-35"
      >
        <a
          class="MuiAvatar-root-38 makeStyles-avatar-34 MuiAvatar-colorDefault-39"
          href="#/"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-41"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 14h-3v3h-2v-3H8v-2h3v-3h2v3h3v2zm-3-7V3.5L18.5 9H13z"
            />
          </svg>
        </a>
        <div
          class="makeStyles-titleWrap-36"
        >
          <h5
            class="MuiTypography-root-50 makeStyles-brandFont-37 MuiTypography-h5-59"
          >
            Of Note
            <small>
              <em>
                s
              </em>
            </small>
          </h5>
          <h6
            class="MuiTypography-root-50 makeStyles-brandFont-37 MuiTypography-subtitle2-62 MuiTypography-colorTextSecondary-76"
          >
            Offline note taking
          </h6>
        </div>
        <button
          class="MuiButtonBase-root-89 MuiIconButton-root-80"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label-88"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-41"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 15.31L23.31 12 20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69zM12 18c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root-182"
          />
        </button>
      </div>
      <div
        class="makeStyles-filter-4"
      >
        <div
          class="MuiFormControl-root-95 MuiTextField-root-94 makeStyles-inp-92 MuiFormControl-fullWidth-98"
        >
          <label
            class="MuiFormLabel-root-111 MuiInputLabel-root-99 MuiInputLabel-formControl-105 MuiInputLabel-animated-108 MuiInputLabel-shrink-107 MuiInputLabel-outlined-110"
            data-shrink="true"
          >
            Filter
          </label>
          <div
            class="MuiInputBase-root-133 MuiOutlinedInput-root-118 MuiInputBase-fullWidth-142 MuiInputBase-formControl-134"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input-143 MuiOutlinedInput-input-127"
              name="filter"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-153 MuiOutlinedInput-notchedOutline-126"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-154"
                style="width: 0px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root-155 MuiFormHelperText-contained-159"
          >
            Search tags or titles
          </p>
        </div>
      </div>
      <hr
        class="MuiDivider-root-163"
      />
      <div
        class="makeStyles-eh-5"
      >
        <ul
          class="MuiList-root-170 MuiList-padding-171"
        />
      </div>
    </div>
    <div
      class="makeStyles-root-177"
    >
      <form>
        <div
          class="makeStyles-root-178"
        >
          <button
            class="MuiButtonBase-root-89 MuiIconButton-root-80 makeStyles-mobileMenu-179"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-88"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-41"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-182"
            />
          </button>
          <span
            class="MuiTypography-root-50 makeStyles-title-181 MuiTypography-h5-59"
          >
            New Note
          </span>
        </div>
        <div
          class="MuiFormControl-root-95 MuiTextField-root-94 makeStyles-inp-92 MuiFormControl-fullWidth-98"
        >
          <label
            class="MuiFormLabel-root-111 MuiInputLabel-root-99 MuiInputLabel-formControl-105 MuiInputLabel-animated-108 MuiInputLabel-outlined-110"
            data-shrink="false"
          >
            Title
          </label>
          <div
            class="MuiInputBase-root-133 MuiOutlinedInput-root-118 MuiInputBase-fullWidth-142 MuiInputBase-formControl-134"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input-143 MuiOutlinedInput-input-127"
              name="title"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-153 MuiOutlinedInput-notchedOutline-126"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-154"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root-155 MuiFormHelperText-contained-159"
          >
             
          </p>
        </div>
        <div
          class="MuiFormControl-root-95 MuiTextField-root-94 makeStyles-inp-92 MuiFormControl-fullWidth-98"
        >
          <label
            class="MuiFormLabel-root-111 MuiInputLabel-root-99 MuiInputLabel-formControl-105 MuiInputLabel-animated-108 MuiInputLabel-outlined-110"
            data-shrink="false"
          >
            Note
          </label>
          <div
            class="MuiInputBase-root-133 MuiOutlinedInput-root-118 MuiInputBase-fullWidth-142 MuiInputBase-formControl-134 MuiInputBase-multiline-141 MuiOutlinedInput-multiline-125"
          >
            <textarea
              aria-invalid="false"
              class="MuiInputBase-input-143 MuiOutlinedInput-input-127 undefined makeStyles-textarea-175 MuiInputBase-inputMultiline-148 MuiOutlinedInput-inputMultiline-130"
              name="md"
              rows="2"
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-153 MuiOutlinedInput-notchedOutline-126"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-154"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root-155 MuiFormHelperText-contained-159"
          >
            Supports Github flavored markdown
          </p>
        </div>
        <div
          class="MuiFormControl-root-95 MuiTextField-root-94 makeStyles-inp-92 MuiFormControl-fullWidth-98"
        >
          <label
            class="MuiFormLabel-root-111 MuiInputLabel-root-99 MuiInputLabel-formControl-105 MuiInputLabel-animated-108 MuiInputLabel-outlined-110"
            data-shrink="false"
          >
            Tags
          </label>
          <div
            class="MuiInputBase-root-133 MuiOutlinedInput-root-118 MuiInputBase-fullWidth-142 MuiInputBase-formControl-134"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input-143 MuiOutlinedInput-input-127"
              name="tags"
              type="text"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-153 MuiOutlinedInput-notchedOutline-126"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-154"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root-155 MuiFormHelperText-contained-159"
          >
            Separated by spaces
          </p>
        </div>
        <div />
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`containers CreateNoteForm matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-195"
  >
    <form>
      <div
        class="makeStyles-root-196"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-mobileMenu-197"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiTypography-root makeStyles-title-199 MuiTypography-h5"
        >
          New Note
        </span>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-251 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
        >
          Title
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            name="title"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-312 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-313"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
        >
           
        </p>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-251 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
        >
          Note
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
        >
          <textarea
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input undefined makeStyles-textarea-193 MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
            name="md"
            rows="2"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-312 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-313"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
        >
          Supports Github flavored markdown
        </p>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-251 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
        >
          Tags
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            name="tags"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-312 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-313"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
        >
          Separated by spaces
        </p>
      </div>
      <div />
    </form>
  </div>
</DocumentFragment>
`;

exports[`containers EditNoteForm matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-336"
  >
    <form>
      <div
        class="makeStyles-root-337"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-mobileMenu-338"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiTypography-root makeStyles-title-340 MuiTypography-h5"
        >
          New Note
        </span>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-392 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
        >
          Title
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            name="title"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-453 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-454"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
        >
           
        </p>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-392 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
        >
          Note
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
        >
          <textarea
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input undefined makeStyles-textarea-334 MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
            name="md"
            rows="2"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-453 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-454"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
        >
          Supports Github flavored markdown
        </p>
      </div>
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-392 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink="false"
        >
          Tags
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            name="tags"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-453 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-454"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
        >
          Separated by spaces
        </p>
      </div>
      <div />
    </form>
  </div>
</DocumentFragment>
`;

exports[`containers NoteDisplay matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-478"
  >
    <div
      class="makeStyles-root-479"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root makeStyles-mobileMenu-480"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <span
        class="MuiTypography-root makeStyles-title-482 MuiTypography-h5"
      />
    </div>
    <div
      class="makeStyles-content-473"
    >
      <span />
    </div>
    <div
      class="makeStyles-tags-476"
    />
    <div />
  </div>
</DocumentFragment>
`;

exports[`containers SideBar matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root makeStyles-root-544 makeStyles-root-548 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="makeStyles-root-577"
    >
      <a
        class="MuiAvatar-root makeStyles-avatar-576 MuiAvatar-colorDefault"
        href="#/"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm2 14h-3v3h-2v-3H8v-2h3v-3h2v3h3v2zm-3-7V3.5L18.5 9H13z"
          />
        </svg>
      </a>
      <div
        class="makeStyles-titleWrap-578"
      >
        <h5
          class="MuiTypography-root makeStyles-brandFont-579 MuiTypography-h5"
        >
          Of Note
          <small>
            <em>
              s
            </em>
          </small>
        </h5>
        <h6
          class="MuiTypography-root makeStyles-brandFont-579 MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
        >
          Offline note taking
        </h6>
      </div>
      <button
        class="MuiButtonBase-root MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M20 15.31L23.31 12 20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69zM12 18c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="makeStyles-filter-546"
    >
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-inp-634 MuiFormControl-fullWidth"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined"
          data-shrink="true"
        >
          Filter
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiOutlinedInput-input"
            name="filter"
            type="text"
            value=""
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-695 MuiOutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-696"
              style="width: 0px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained"
        >
          Search tags or titles
        </p>
      </div>
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      class="makeStyles-eh-547"
    >
      <ul
        class="MuiList-root MuiList-padding"
      />
    </div>
  </div>
</DocumentFragment>
`;
